tests/sumo/basic/vtypes/invalid_type/errors.sumo
Error: The vehicle class 'car' for vType 'DEFAULT_VEHTYPE' is not known.
